--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,32 @@
 body {
     margin: 0 auto;
-    border-radius: 0%;
+    font-family: sans-serif;
 }
 
 .main-text {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0);
-    color:red;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 0 10px;
 }
 
 .feed {
     flex-grow: 1;
-    height: 50px;
     overflow: hidden;
-    position: relative;
-    margin-right: 10px;
-    cursor: pointer;
-}
-
-.feed:hover h3 {
-    animation-play-state: paused;
+    display: flex;
+    align-items: center;
 }
 
 .feed h3 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     margin: 0;
-    line-height: 50px;
+    padding: 0;
+    line-height: 40px;
+    white-space: nowrap;
     transform: translateX(100%);
     animation: feed 60s linear infinite;
-    white-space: nowrap;
+    color: white;
 }
 
 @keyframes feed {
@@ -42,8 +36,4 @@ body {
     100% {
         transform: translateX(-100%);
     }
-}
-
-#hideButton {
-    flex-shrink: 0;
 }
