--- a/styles.css
+++ b/styles.css
@@ -21,17 +21,16 @@ body {
 
 .feed h3 {
     margin: 0;
-    padding: 0;
     line-height: 40px;
     white-space: nowrap;
-    transform: translateX(100%);
+    transform: translateX(calc(100%));
     animation: feed 60s linear infinite;
     color: white;
 }
 
 @keyframes feed {
     0% {
-        transform: translateX(100%);
+        transform: translateX(calc(100%));
     }
     100% {
         transform: translateX(-100%);
