--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     align-items: center;
     white-space: nowrap;
-    color: #00bfff;
+    color: #0275d8;
     gap: 80px;
     cursor: pointer;
     transform: translateX(100%);
