--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 40px;
+    height: 48px;
     background-color: whitesmoke;
     padding: 0 10px;
 }
@@ -18,21 +18,25 @@ body {
     overflow: hidden;
     display: flex;
     align-items: center;
+    vertical-align: middle;
     position: relative;
 }
 
 .messages-container {
     display: flex;
-    align-items: center;
     white-space: nowrap;
-    color: #0275d8;
-    gap: 80px;
+    text-align: center;
+    color: #3B76F6;
+    gap: 24px;
     cursor: pointer;
+    height: 40px;
+    line-height: 20px;
     transform: translateX(100%);
     animation: feed 60s linear infinite;
 }
 
 .messages-container img {
+    display: inline-block;
     margin-right: 20px;
 }
 
